Fixed a bug on Mobile Views

--- a/src/components/LandingV2-Components/Sections/Tribepop/Tribepop.module.css
+++ b/src/components/LandingV2-Components/Sections/Tribepop/Tribepop.module.css
@@ -149,6 +149,9 @@
 	.Text {
 		width: calc(75% - 10px);
 	}
+	.TextContainer {
+		width: 370px;
+	}
 }
 
 /* TABLET */
